# devbot-codegen

./: .gitignore  README.md  learning_patterns.json  pyproject.toml  requirements-test.txt  run_tests.py
src/: advanced_debugging.py  app.py  chunkrant.py  config.py  demo_advanced_debugging.py  models.py  services.py  text.py  worker.py
tests/: __init__.py  test_api.py  test_models.py  test_services.py
